# S2lab2

./: AllTests.cpp  AllTests.h  ArraySequence.cpp  ArraySequence.h  CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  LinkedList.cpp  LinkedList.h  LinkedListSequence.cpp  LinkedListSequence.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  MenuAll.cpp  MenuAll.h  MenuMatrix.cpp  MenuMatrix.h  MenuVector.cpp  MenuVector.h  Sequence.h  Tests_AS and LLS.cpp  Tests_AS and LLS.h  Tests_DA and LL.cpp  Tests_DA and LL.h  Vector.cpp  Vector.h  main.cpp
